# psiflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.cp2k  Dockerfile.gpaw  Dockerfile_cuda  Dockerfile_rocm  LICENSE  README.md  Thumbs.db  build_containers.sh  conftest.py  examples.md  index.html  install.sh  install_local.sh  mkdocs.yml  objects.inv  overview.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml
.github/: threadpool.yaml
.github/workflows/: run_pytest.yaml  threadpool.py  threadpool.yaml
CP2K/: index.html
EMT/: index.html
VASP/: index.html
autolearn/: __init__.py  base.py  bias.py  dataset.py  execution.py  utils.py
autolearn/models/: __init__.py  _nequip.py  _nequip_old.py  base.py  model.py
autolearn/reference/: __init__.py  _cp2k.py  _emt.py  base.py
autolearn/sampling/: __init__.py  base.py  bias.py  dynamic.py  ensemble.py  random.py  utils.py
autolearn/tests/: common.py  test_bias.py  test_dataset.py  test_dynamic.py  test_ensemble.py  test_models.py  test_reference.py  test_sampling.py  utils.py
checks/: index.html
config/: index.html
configs/: csc_mahti.yaml  eurohpc_lumi.py  example_local_debug.yaml  example_tier0_lumi.yaml  example_tier1_hortense.yaml  example_tier2_ugent.yaml  hortense.yaml  htex.yaml  local_htex.py  local_test.yaml  local_threadpool.py  local_wq.py  lumi.py  lumi.yaml  mahti.yaml  meluxina.yaml  old_hortense.yaml  old_lumi.yaml  old_threadpool.yaml  old_wq.yaml  puhti.yaml  threadpool.yaml  vsc_hortense.py  vsc_hortense.yaml  vsc_hortense_htex.py  vsc_hortense_wq.py  vsc_stevin.py  workqueue.yaml  wq.yaml
configuration/: index.html
container/: Dockerfile_py39_cuda  Dockerfile_python3.10_cuda  Dockerfile_python3.9_cuda
data/: index.html
docs/: CP2K.md  Thumbs.db  checks.md  config.md  configuration.md  data.md  ensemble.md  examples.md  execution.md  experiment.md  generator.md  hamiltonian.md  index.md  install.sh  installation.md  learning.md  manager.md  models.md  overview.md  reference.md  sampling.md
docs/models/: mace.md  nequip.md
docs/reference/: EMT.md
docs/sampling/: dynamic.md  optimization.md  plumed_bias.md  random.md
ensemble/: index.html
examples/: README.md  alanine_nwchem.py  alanine_pyscf.py  alanine_replica_exchange.py  copper_emt.py  formic_acid_transition.py  h2_static_dynamic.py  hortense.yaml  index.html  iron_bulk_modulus.py  iron_bulk_modulus_rex.py  iron_harmonic_fcc_bcc.py  iron_thermodynamic_integration.py  learning_path_integral_md.py  lumi.yaml  mof_phase_transition.py  online_learning_pimd.py  perovskite_defect.py  proton_jump_plumed.py  run_basic_online.py  run_batch_learning.py  run_batched.py  run_concurrent_learning.py  run_dihydrogen.py  run_log_wandb.py  run_nanoporous.py  run_online.py  run_passive.py  run_sequential_learning.py  run_train_npt.py  run_zeolite.py  submit.sh  submit_hortense.sh  submit_lumi.sh  umbrella_sampling_proton_jump.py  water_cp2k_noise.py  water_online_learning.py  water_path_integral_md.py  water_train_validate.py  zeolite_diffusion.py  (+1 more)
examples/data/: Al_mil53.xyz  Al_mil53_train.xyz  Al_mil53_valid.xyz  acetaldehyde.xyz  alanine.xyz  cp2k_input.txt  h2o_32.xyz  h2o_64.xyz  methane_clathrate.xyz  mof.xyz  perovskite_defect.xyz  vinyl_alcohol.xyz  zeolite.xyz  zeolite_ethene.xyz  zeolite_proton.xyz
examples/notebook/: train.xyz  tutorial.ipynb
examples/submit/: hortense.yaml  lumi.yaml  submit_hortense.sh  submit_lumi.sh
execution/: index.html
experiment/: index.html
flower/: checks.py  data.py  dataset.py  ensemble.py  execution.py  learning.py  manager.py  utils.py
flower/configs/: local_htex.py  local_threadpool.py  vsc_hortense.py
flower/models/: __init__.py  _nequip.py  base.py
flower/reference/: _cp2k.py  _emt.py  base.py
flower/sampling/: __init__.py  base.py  bias.py  dynamic.py  ensemble.py  utils.py  (+2 more)
free_energy/: index.html
generator/: index.html
hamiltonian/: index.html
installation/: index.html
learning/: index.html
manager/: index.html
models/: index.html
models_nequip/: index.html
notebook/: notebook_utils.py  zerokelvin.xyz
overview/: index.html
psiflow/: .execution.py.swp  .test.py.swp  \  __init__.py  _hamiltonians.py  abandonware.py  checks.py  committee.py  compute.py  config.py  data.py  ensemble.py  execution.py  experiment.py  filter.py  function.py  functions.py  generate.py  generator.py  geometry.py  hamiltonian.py  hamiltonians.py  learning.py  learning_utils.py  manager.py  metrics.py  order_parameters.py  parsl_utils.py  sampling.py  serialization.py  state.py  test.py  thermodynamic_integration.py  utils.py  wandb_utils.py
reference/: index.html
sampling/: index.html
setup/: index.html
tests/: 3  ]  conftest.py  test_bias.py  test_checks.py  test_committee.py  test_data.py  test_dataset.py  test_ensemble.py  test_execution.py  test_filter.py  test_flow_logger.py  test_flow_manager.py  test_free_energy.py  test_function.py  test_generate.py  test_generator.py  test_hamiltonian.py  test_integration.py  test_launcher.py  test_learning.py  test_manager.py  test_models.py  test_reference.py  test_sampling.py  test_serialization.py  test_state.py  test_ti.py  test_tools.py  test_walkers.py  test_wandb.py
(+116 files in other folders)
