[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "psiflow"
version = "2.0.0"
description = "Library for developing interatomic potentials"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.22.1",
    "pyyaml>=6.0",
    "numpy>=1.22.3",
    "wandb>=0.14.0",
    "pymatgen>=2023.3.23",
    "parsl",
    ]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "coverage>=6.5.0",
    "coveralls>=3.3.1",
    ]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-material>=9.0.3",
    "mkdocs-material-extensions>=1.1.1",
    "mkdocstrings>=0.19.1",
    "mkdocstrings-python>=0.8.3",
    ]
dev = [
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject",
    ]


[project.scripts]
psiflow-train-nequip = 'psiflow.models.train_nequip:main'
psiflow-deploy-nequip = 'psiflow.models.deploy_nequip:main'
psiflow-train-mace   = 'psiflow.models.train_mace:main'
psiflow-md-yaff      = 'psiflow.walkers.molecular_dynamics_yaff:main'
psiflow-md-openmm    = 'psiflow.walkers.molecular_dynamics_openmm:main'
psiflow-test         = 'psiflow.test:main'


[tool.setuptools.packages.find]
include = [
    "psiflow",
    "psiflow.models",
    "psiflow.reference",
    "psiflow.walkers",
    "psiflow.external",
    ]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "E704", "B006"]
#select = C,E,F,W,B,B950

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = 0
addopts = [
    "--basetemp=pytest-tmp", # /tmp/ may be different for each worker!
    "--import-mode=append",
    "--psiflow-config=configs/local_threadpool.py",
    "-W ignore::DeprecationWarning",
    #"--log-cli-level=WARNING",
]
testpaths = ["tests"]
