[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "psiflow"
version = "3.0.4"
description = "Library for developing interatomic potentials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22.1",
    "pyyaml>=6.0",
    "numpy>=1.22.3",
    "parsl",
    "prettytable",
    "psutil",
    "cp2k-input-tools",
    "pytimeparse",
    ]

[project.optional-dependencies]
parsl = ['parsl==2024.02.12']
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-material>=9.0.3",
    "mkdocs-material-extensions>=1.1.1",
    "mkdocstrings>=0.19.1",
    "mkdocstrings-python>=0.8.3",
    ]
dev = [
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject",
    "pytest>=7.2.0",
    "coverage>=6.5.0",
    "coveralls>=3.3.1",
    ]


[tool.setuptools.packages.find]
include = [
    "psiflow",
    "psiflow.models",
    "psiflow.hamiltonians",
    "psiflow.reference",
    "psiflow.sampling",
    "psiflow.tools",
    "psiflow.free_energy",
    ]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "E704", "B006"]
#select = C,E,F,W,B,B950

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = 0
addopts = [
    "--basetemp=pytest-tmp", # /tmp/ may be different for each worker!
    "--import-mode=append",
    "--psiflow-config=configs/threadpool.yaml",
    "-W ignore::DeprecationWarning",
    "--log-cli-level=WARNING",
]
testpaths = ["tests"]
